[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiverse"
version = "0.1.0"
description = "A Python package for DICOM image processing."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "shujuecn", email = "yinlin2824@gmail.com" }
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "pydicom",
    "pillow",
    "matplotlib"
]
keywords = ["dicom", "medical imaging", "image processing"]

[project.urls]
"Homepage" = "https://github.com/shujuecn/radiverse"

[tool.setuptools.packages.find]
where = ["src"]
